Suppress the WriteError on WindowsCompact 2013

Apparently, the windows WriteFile function returns false
for 0-length data on Windows Compact 2013 systems, that
causes the QSerialPort::WriteError emission. We need to
avoid to write an empty data buffer with the WriteFile
function.

Task-number: QTBUG-57783
Change-Id: I91ef25bd25b7869096ea25a76462d0d8bb043919
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>